--- a/src/app/components/lista-adquisiciones/lista-adquisiciones.component.html
+++ b/src/app/components/lista-adquisiciones/lista-adquisiciones.component.html
@@ -4,8 +4,8 @@
   <vex-page-layout-header class="flex flex-col items-start justify-center">
     <div class="w-full flex flex-col sm:flex-row justify-between">
       <div>
-        <h1 class="title mt-0 mb-1">Adquisicions</h1>
-        <vex-breadcrumbs [crumbs]="['Catálogos','Adquisicions']"></vex-breadcrumbs>
+        <h1 class="title mt-0 mb-1">Adquisiciones</h1>
+        <vex-breadcrumbs [crumbs]="['Catálogos','Adquisiciones']"></vex-breadcrumbs>
       </div>
     </div>
   </vex-page-layout-header>
@@ -91,7 +91,7 @@
       </div>
 
       <!--  -->
-      <div>
+      <!-- <div>
         <form role="form" autocomplete="off" [formGroup]="formFiltros" novalidate>
           <div class="mt-4 flex flex-col gap-2  m-2">
               <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
@@ -125,7 +125,7 @@
 
           </div>
       </form>
-      </div>
+      </div> -->
 
 
       <!-- CARDS -->
