--- a/src/app/components/lista-productos/lista-productos.component.html
+++ b/src/app/components/lista-productos/lista-productos.component.html
@@ -155,7 +155,7 @@
               </div>
               <mat-divider></mat-divider>
               <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Proveedor: {{ item.proveedor }}</div>
+                <div class="text-center">Proveedor: {{  ''}}</div>
               </div>
               <mat-divider></mat-divider>
               <!-- <div class="flex justify-between items-center mb-10">
