--- a/src/app/components/lista-adquisiciones/modal-producto-adquisicion/modal-producto-adquisicion.component.html
+++ b/src/app/components/lista-adquisiciones/modal-producto-adquisicion/modal-producto-adquisicion.component.html
@@ -1,6 +1,6 @@
 <form role="form" autocomplete="off" [formGroup]="formProducto" novalidate>
   <div class="flex items-center " style="border: none !important" mat-dialog-title >
-    <h2 class="headline m-0 flex-auto">{{this.productoModel.iD > 0 ? 'Editar producto ' : 'Agregar producto '}} <b>{{this.productoModel}}</b></h2>
+    <h2 class="headline m-0 flex-auto">{{this.productoModel.id > 0 ? 'Editar producto ' : 'Agregar producto en la adquisición'}} </h2>
     <button></button>
     <!-- <mat-icon  svgIcon="mat:help" matTooltip="El grupo de opciones funciona como un alias o una etiqueta para una lista de opciones."></mat-icon> -->
     <button class="text-secondary" mat-dialog-close mat-icon-button type="button">
@@ -10,38 +10,66 @@
   <mat-divider class="-mx-6 text-border"></mat-divider>
   <mat-dialog-content class="px-1 ">
     <div class="mt-4 flex flex-col gap-2  m-2">
-      <div class="flex flex-col sm:gap-4">
+      <div  class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
         <mat-form-field class="flex-auto">
           <mat-label>Producto</mat-label>
-          <!-- <mat-select formControlName="característica">
-            <mat-option *ngFor="let producto of listaProductos" [value]="producto.id">{{producto.producto}}</mat-option>
-          </mat-select> -->
           <input type="text" matInput formControlName="producto" maxlength="2000" [matAutocomplete]="auto">
           <mat-autocomplete #auto="matAutocomplete">
             <mat-option *ngFor="let producto of filteredProductos | async" [value]="producto.modelo" (onSelectionChange)="productoSeleccionado(producto)">
               {{producto.modelo}}
             </mat-option>
+
           </mat-autocomplete>
+<!--           <button
+          mat-icon-button
+          matSuffix
+          color="primary"
+          matTooltip="Agregar nuevo producto"
+          type="button"
 
-
+      >
+        <mat-icon svgIcon="mat:add"></mat-icon>
+      </button> -->
           <mat-error *ngIf="this.producto_.hasError('required')"> El campo es requerido</mat-error>
         </mat-form-field>
         <mat-form-field class="flex-auto">
-          <mat-label>Producto del artículo</mat-label>
-          <input type="text" matInput formControlName="productoArticulo" maxlength="2000">
-          <mat-error *ngIf="this.productoArticulo.hasError('required')"> El campo es requerido</mat-error>
+          <mat-label>Cantidad</mat-label>
+          <input type="number" min="1" matInput formControlName="cantidad" maxlength="2000">
+          <mat-error *ngIf="this.cantidad.hasError('required')"> El campo es requerido</mat-error>
         </mat-form-field>
-
-
+        <mat-form-field class="flex-auto">
+          <mat-label>Costo unitario</mat-label>
+          <input currencyMask type="text" matInput formControlName="costoUnitario" maxlength="2000">
+          <mat-error *ngIf="this.costoUnitario.hasError('required')"> El campo es requerido</mat-error>
+        </mat-form-field>
       </div>
     </div>
-
+{{this. formProducto.getRawValue() | json}}
   </mat-dialog-content>
 
   <mat-dialog-actions align="end">
     <!-- <button type="button" mat-button (click)="close(false)">Cancelar</button> -->
-    <button type="button" mat-button mat-dialog-close>Cancelar</button>
-    <button type="submit" mat-flat-button color="primary" (click)="guardarProducto()" [disabled]=" formProducto.invalid ">{{this.productoModel.iD > 0 ? 'Editar' : 'Agregar'}}</button>
+    <button
+    (click)="openModalProducto(null)"
+    class=" m-2 bg-teal-700 hover:bg-teal-800 text-teal-200 font-bold py-2 px-2 rounded-full inline-flex items-center shadow-md"
+  >
+    Nuevo producto
+    <!-- <svg
+      class="fill-current w-5 h-5"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 20 20"
+    >
+      <path d="M13 8V2H7v6H2l8 8 8-8h-5zM0 18h20v2H0v-2z" />
+    </svg> -->
+  </button>
+<!--   <button
+
+  class="bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold py-1 px-1 rounded-full inline-flex items-center shadow-md"
+>
+  Cancelar
+</button> -->
+    <button class="m-2"  type="button" mat-button mat-dialog-close>Cancelar</button>
+    <button type="submit" mat-flat-button color="primary" (click)="guardarProducto()" [disabled]=" formProducto.invalid ">{{this.productoModel.id > 0 ? 'Editar' : 'Agregar'}}</button>
   </mat-dialog-actions>
 
   </form>
