--- a/src/app/components/lista-cliente/modal-cliente-catalogo/modal-cliente-catalogo.component.html
+++ b/src/app/components/lista-cliente/modal-cliente-catalogo/modal-cliente-catalogo.component.html
@@ -1,14 +1,17 @@
-<form role="form" autocomplete="off" [formGroup]="formPropietario" novalidate>
-  <div class="flex items-center " style="border: none !important" mat-dialog-title >
-    <h2 class="headline m-0 flex-auto">{{this.propietarioModel.id > 0 ? 'Editar cliente ' : 'Agregar cliente '}} <b>{{this.propietarioModel.nombre}}</b></h2>
+<div class="overflow-hidden">
+  <form role="form" autocomplete="off" [formGroup]="formPropietario"
+  novalidate>
+  <div class="flex items-center " style="border: none !important" mat-dialog-title>
+    <h2 class="headline m-0 flex-auto">{{this.propietarioModel.id > 0 ? 'Editar cliente ' : 'Agregar cliente '}}
+      <b>{{this.propietarioModel.nombre}}</b></h2>
     <button></button>
     <!-- <mat-icon  svgIcon="mat:help" matTooltip="El grupo de opciones funciona como un alias o una etiqueta para una lista de opciones."></mat-icon> -->
     <button class="text-secondary" mat-dialog-close mat-icon-button type="button">
-        <mat-icon svgIcon="mat:close"></mat-icon>
+      <mat-icon svgIcon="mat:close"></mat-icon>
     </button>
   </div>
   <mat-divider class="-mx-6 text-border"></mat-divider>
-  <mat-dialog-content class="px-1 ">
+  <mat-dialog-content class="p-1">
     <div class="mt-4 flex flex-col gap-2  m-2">
       <div class="flex flex-col lg:flex-row md:flex-row sm:gap-4">
         <mat-form-field class="flex-auto">
@@ -47,19 +50,23 @@
         </mat-form-field>
         <mat-form-field class="flex-auto">
           <mat-label>Latitud</mat-label>
-          <input type="text" matInput formControlName="latitud">
+          <input type="text" matInput formControlName="latitud" (blur)="cargarMapa()">
           <mat-error *ngIf="this.latitud.hasError('required')"> El campo es requerido</mat-error>
         </mat-form-field>
+      </div>
+      <div *ngIf="this.verMapa == true" class="flex justify-center">
+        <iframe *ngIf="this.tamanoPantalla == true" class="iframe" [src]=" urlMapa(this.mapa)" width="60%" height="350"
+          frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe *ngIf="this.tamanoPantalla == false" class="iframe" [src]=" urlMapa(this.mapa)" width="100%" height="300"
+          frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
     </div>
 
   </mat-dialog-content>
-
-  <mat-dialog-actions align="end">
+  <mat-dialog-actions class="my-0 py-0" align="end">
     <!-- <button type="button" mat-button (click)="close(false)">Cancelar</button> -->
     <button type="button" mat-button mat-dialog-close>Cancelar</button>
     <button type="submit" mat-flat-button color="primary" (click)="guardarPropietario()" [disabled]=" formPropietario.invalid ">{{this.propietarioModel.id > 0 ? 'Editar' : 'Agregar'}}</button>
   </mat-dialog-actions>
-
-  </form>
-
+</form>
+</div>
