--- a/src/app/components/lista-proveedor/modal-proveedor/modal-proveedor.component.html
+++ b/src/app/components/lista-proveedor/modal-proveedor/modal-proveedor.component.html
@@ -82,7 +82,7 @@
                 {{ item.telefono}}
               </td>
               <td class="py-4 px-6 flex items-center justify-center">
-                <a (click)="eliminarSubordinado(item.nombreCompleto)" matTooltip="Eliminar"
+                <a (click)="eliminarSubordinado(item.id)" matTooltip="Eliminar"
                   class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-warn bg-primary/10"
                   mat-icon-button>
                   <mat-icon class="icon-sm" svgIcon="mat:delete"></mat-icon>
