Avance servicios Adquisicion

--- a/src/app/components/lista-adquisiciones/lista-adquisiciones.component.html
+++ b/src/app/components/lista-adquisiciones/lista-adquisiciones.component.html
@@ -146,26 +146,23 @@
               class="w-full p-5 bg-white border border-gray-200 rounded-lg shadow-md mr-5"
             >
               <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Monto: {{ item.mONTO }}</div>
+              <div class="flex justify-center items-center mb-5">
+                <div class="text-center">Proveedor: {{ item.proveedor }}</div>
               </div>
               <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Impuesto: {{ item.iMPUESTO }}</div>
+              <div class="flex justify-center items-center mb-5">
+                <div class="text-center">Propietario: {{ item.propietario }}</div>
               </div>
               <mat-divider></mat-divider>
-              <div class="flex justify-center items-center mb-10">
-                <div class="text-center">Articulos: {{ item.aRTICULOS }}</div>
+              <div class="flex justify-center items-center mb-5">
+                <div class="text-center">Fecha de compra: {{ item.fechadecompra }}</div>
               </div>
               <mat-divider></mat-divider>
-              <!-- <div class="flex justify-between items-center mb-10">
-                <div>
-                  Cuenta:
-                </div>
-                <div>
-                  Rol:
-                </div>
-              </div> -->
+
+              <div class="flex justify-between items-center mb-10">
+                <div class="text-center">Articulos: {{ item.articulos }}</div>
+                <div class="text-center">Monto: {{ item.monto }}</div>
+              </div>
               <mat-divider></mat-divider>
               <div class="flex justify-center items-center">
                 <div class="mr-5">
